# bufo

./: .gitignore  PROGRESS.md  README.md  pyproject.toml
src/bufo/: __init__.py  __main__.py  app.py  cli.py  messages.py  notifications.py  paths.py  prompt_resources.py  runtime_logging.py  telemetry.py  version.py  version_check.py
src/bufo/agents/: __init__.py  bridge.py  catalog.py  schema.py  session_updates.py
src/bufo/config/: models.py  store.py
src/bufo/data/agents/: default.toml
src/bufo/fs/: __init__.py  filtering.py  scanner.py  watch.py
src/bufo/persistence/: history.py  sessions.py
src/bufo/protocol/: __init__.py  jsonrpc.py
src/bufo/screens/: __init__.py  main.py  modals.py  sessions.py  settings.py  store.py
src/bufo/sessions/: __init__.py  tracker.py
src/bufo/shell/: __init__.py  persistent.py  safety.py
src/bufo/ui/: diff.py
src/bufo/widgets/: conversation.py  project_tree.py  selectable_rich_log.py  terminal.py
tests/: test_acp_bridge.py  test_core.py  test_e2e_app.py  test_e2e_cli.py  test_runtime_logging.py  test_session_update_mapping.py
