[project]
name = "bufo"
version = "0.0.1"
description = "TUI and Web UI framework for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "bitnom" }]
keywords = ["bufo", "ai", "agents", "tui", "webui", "framework"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "agent-client-protocol",
    "aiosqlite>=0.22.1",
    "bashlex>=0.18",
    "click>=8.3.1",
    "gitpython>=3.1.46",
    "google-re2>=1.1.20251105",
    "httpx>=0.28.1",
    "notify-py>=0.3.43",
    "packaging>=26.0",
    "pathspec>=1.0.4",
    "platformdirs>=4.9.2",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.3",
    "setproctitle>=1.3.7",
    "tomli>=2.0.1; python_version < '3.11'",
    "textual-serve>=1.1.3",
    "textual-speedups>=0.2.1",
    "textual[syntax]",
    "tree-sitter>=0.25.2",
    "typeguard>=4.5.1",
    "watchdog>=6.0.0",
    "xdg-base-dirs>=6.0.2",
]

[tool.uv.sources]
textual = { path = "../textual", editable = true }
agent-client-protocol = { path = "../acp-python", editable = true }

[project.scripts]
bufo = "bufo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bufo"]
include = ["src/bufo/data/**/*.toml"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyinstrument>=5.1.1",
    "textual-dev>=1.8.0",
]
